[package]
name = "fly_os"
version = "0.1.0"
edition = "2021"
authors = ["Zakiaatot <https://github.com/zakiaatot>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.23"

[profile.dev]
panic = "abort" # 禁用panic时栈展开

[profile.release]
panic = "abort" # 禁用panic时栈展开
